// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component supports contained buttons 1`] = `
"<button
  class=\\"mdc-button mdc-button--raised\\"
>
  <div
    class=\\"mdc-button__ripple\\"
  />
  <span
    class=\\"mdc-button__label\\"
  >
    foo
  </span>
</button>"
`;

exports[`Button component supports contained buttons 2`] = `
"<div
  class=\\"mdc-touch-target-wrapper\\"
>
  <button
    class=\\"mdc-button mdc-button--raised mdc-button--touch\\"
    type=\\"button\\"
  >
    <div
      class=\\"mdc-button__ripple\\"
    />
    <i
      aria-hidden=\\"true\\"
      class=\\"material-icons mdc-button__icon\\"
    >
      favorite
    </i>
    <span
      class=\\"mdc-button__label\\"
    >
      foo
    </span>
    <div
      class=\\"mdc-button__touch\\"
    />
  </button>
</div>"
`;

exports[`Button component supports contained buttons 3`] = `
"<button
  class=\\"mdc-button mdc-button--raised bar\\"
  disabled=\\"\\"
>
  <div
    class=\\"mdc-button__ripple\\"
  />
  <i
    aria-hidden=\\"true\\"
    class=\\"fa fa-aws mdc-button__icon\\"
  />
  <span
    class=\\"mdc-button__label\\"
  >
    foo
  </span>
</button>"
`;

exports[`Button component supports outlined buttons 1`] = `
"<button
  class=\\"mdc-button mdc-button--outlined\\"
>
  <div
    class=\\"mdc-button__ripple\\"
  />
  <span
    class=\\"mdc-button__label\\"
  >
    foo
  </span>
</button>"
`;

exports[`Button component supports outlined buttons 2`] = `
"<div
  class=\\"mdc-touch-target-wrapper\\"
>
  <button
    class=\\"mdc-button mdc-button--outlined mdc-button--touch\\"
    type=\\"button\\"
  >
    <div
      class=\\"mdc-button__ripple\\"
    />
    <i
      aria-hidden=\\"true\\"
      class=\\"material-icons mdc-button__icon\\"
    >
      favorite
    </i>
    <span
      class=\\"mdc-button__label\\"
    >
      foo
    </span>
    <div
      class=\\"mdc-button__touch\\"
    />
  </button>
</div>"
`;

exports[`Button component supports outlined buttons 3`] = `
"<button
  class=\\"mdc-button mdc-button--outlined bar\\"
  disabled=\\"\\"
>
  <div
    class=\\"mdc-button__ripple\\"
  />
  <i
    aria-hidden=\\"true\\"
    class=\\"fa fa-aws mdc-button__icon\\"
  />
  <span
    class=\\"mdc-button__label\\"
  >
    foo
  </span>
</button>"
`;

exports[`Button component supports text buttons 1`] = `
"<button
  class=\\"mdc-button\\"
>
  <div
    class=\\"mdc-button__ripple\\"
  />
  <span
    class=\\"mdc-button__label\\"
  >
    foo
  </span>
</button>"
`;

exports[`Button component supports text buttons 2`] = `
"<div
  class=\\"mdc-touch-target-wrapper\\"
>
  <button
    class=\\"mdc-button mdc-button--touch\\"
    type=\\"button\\"
  >
    <div
      class=\\"mdc-button__ripple\\"
    />
    <i
      aria-hidden=\\"true\\"
      class=\\"material-icons mdc-button__icon\\"
    >
      favorite
    </i>
    <span
      class=\\"mdc-button__label\\"
    >
      foo
    </span>
    <div
      class=\\"mdc-button__touch\\"
    />
  </button>
</div>"
`;

exports[`Button component supports text buttons 3`] = `
"<button
  class=\\"mdc-button bar\\"
>
  <div
    class=\\"mdc-button__ripple\\"
  />
  <i
    aria-hidden=\\"true\\"
    class=\\"fa fa-aws mdc-button__icon\\"
  />
  <span
    class=\\"mdc-button__label\\"
  >
    foo
  </span>
</button>"
`;

exports[`Button component supports text buttons 4`] = `
"<button
  class=\\"mdc-button\\"
  disabled=\\"\\"
  type=\\"reset\\"
>
  <div
    class=\\"mdc-button__ripple\\"
  />
  <i
    aria-hidden=\\"true\\"
    class=\\"material-icons mdc-button__icon\\"
  >
    favorite
  </i>
  <span
    class=\\"mdc-button__label\\"
  >
    foo
  </span>
</button>"
`;
